fix($stylesheet): Vertical align items in form group

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -247,6 +247,7 @@
 // Forms
 @mixin form-group {
   @include make-row(false);
+  @include align-items(center);
 
   margin: 0 0 $gutter-width / 2;
 
